# rants

./: Cargo.toml
backend/: .env  Cargo.toml
backend/migrations/2022-11-07-165049_create_rants/: down.sql  up.sql
backend/src/: api.rs  dbconnector.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
frontend/src/: Api.js  App.js  Rant.js  index.js
src/: main.rs
