[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.3"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.147", features = ["derive"] }